--- a/src/components/landing-section/event_section/event.css
+++ b/src/components/landing-section/event_section/event.css
@@ -2,6 +2,11 @@
   zoom: 100%;
   transform: translate(0, -10%);
   transition: 1s;
+
+    -webkit-box-shadow: 0px 1px 14px -3px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 1px 14px -3px rgba(0,0,0,0.75);
+box-shadow: 0px 1px 14px -3px rgba(0,0,0,0.75);
+  transition: 1s;
 }
 .swipe {
   zoom: 100%;
