--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,14 @@ body {
   font-family: inherit, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
 }
 * {
   cursor: url(../src/components/landing-section/images/circle.png) 16 16, auto;
   scroll-behavior: smooth;
-  
+}
+@font-face {
+  font-family: Ddt;
+  src: url(../public/fonts/DDTHv-Regular.ttf);
 }
 
 @font-face {
@@ -60,23 +62,17 @@ body {
   height: 100vh;
 }
 
-
-
-.course_bg_img{
+.course_bg_img {
   /* background-image:url('../public/courseimg/course.png') ; */
 
-
-    background-image: linear-gradient(
+  /* background-image: linear-gradient(
       -45deg,
       rgba(4, 1, 38, 0.713),
       rgba(2, 3, 69, 0.895)
     ),
-url('../public/courseimg/course.png') ;
+url('../public/courseimg/course.png') ; */
 
- 
-
-    background-size: cover;
-     
+  /* background-size: cover; */
 }
 
 .view {
@@ -141,76 +137,64 @@ url('../public/courseimg/course.png') ;
   @apply text-soon font-bold;
 }
 
-
-
 .img img {
-
   /* padding: 80px; */
 
- /* position: relative; */
+  /* position: relative; */
 
- animation:mymove 4s ease-in-out infinite alternate-reverse both;
- 
+  animation: mymove 4s ease-in-out infinite alternate-reverse both;
 }
 
-
-
-
-
-@keyframes mymove{
-  
+@keyframes mymove {
   0% {
     transform: translateY(10px);
-}
-100% {
-  transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 
-}
-
-
+/* clone */
 
 /*background theme*/
 
-
-.aboutbg{
- /* background-color: #0B0B0F; */
- /* background-color: white; */
- background-color: transparent;
- /* background-color: #000035; */
+.aboutbg {
+  /* background-color: #0B0B0F; */
+  /* background-color: white; */
+  background-color: transparent;
+  /* background-color: #000035; */
 }
-.careerbg{
+.careerbg {
   /* background-color: black; */
   /* background-color: white; */
   background-color: transparent;
   /* background-color: #000042; */
 }
 
-.videobg{
+.videobg {
   /* background-color: black; */
   /* background-color: white; */
   background-color: transparent;
-   /* background-color: #000053; */
+  /* background-color: #000053; */
 }
-.eventbg{
+.eventbg {
   /* background-color: #020202; */
   /* background-color: white; */
   background-color: transparent;
   /* background-color: #000068; */
- 
 }
-.reviewbg{
+.reviewbg {
   /* background-color: black; */
   /* background-color: white; */
   background-color: transparent;
   /* background-color: #1c1c84; */
 }
-.footerbg{
+.footerbg {
   /* background-color: #ffffff; */
   background-color: transparent;
-/* color: white; */
+  /* color: white; */
 }
 
-.parafont{
-  color:black !important;
+.parafont {
+  color: black !important;
 }
