--- a/src/components/course/Section.css
+++ b/src/components/course/Section.css
@@ -1,64 +1,79 @@
-.minih{
-    font-size: 13px;
-    font-weight: 700;
-    
+.minih {
+  font-size: 13px;
+  font-weight: 700;
 }
-
-
 
 .ab_btnc {
- width: 9em;
- height: 3em;
- border-radius: 30em;
- font-size: 15px;
- font-family: inherit;
- border: none;
- position: relative;
- overflow: hidden;
- z-index: 1;
-
+  width: 9em;
+  height: 3em;
+  border-radius: 30em;
+  font-size: 15px;
+  font-family: inherit;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
 }
 
-
-.tools{
-    background: rgb(14,46,130);
-background: linear-gradient(166deg, rgba(14,46,130,1) 0%, rgba(3,3,53,1) 99%);
+.tools {
+  background: #277de0;
+border: 2px solid black;
+  /* background: linear-gradient(166deg, rgba(14,46,130,1) 0%, rgba(3,3,53,1) 99%); */
 }
 
 .ab_btnc::before {
- content: '';
- width: 0;
- height: 3em;
- border-radius: 30em;
- position: absolute;
- top: 0;
- left: 0;
- background-image: linear-gradient(to right, #216eff 0%, #2b2b2b 100%);
- transition: .5s ease;
- display: block;
- z-index: -1;
+  content: "";
+  width: 0;
+  height: 3em;
+  border-radius: 30em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to right, #216eff 0%, #2b2b2b 100%);
+  transition: 0.5s ease;
+  display: block;
+ 
 }
 
 .ab_btnc:hover::before {
- width: 9em;
+  width: 9em;
 }
 
-
-.course_btn1{
-  /* background-color: #030334; */
-box-shadow: inset 8px 8px 12px #e2e2e2, inset -8px -8px 12px #fff;
-/* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
-    border-radius: 10px;
+.coursebr:hover{
+    border-color: #277de0;
 }
 
-.course_btn2{
-    background-color: #020335;
+.course_btn2 {
+
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
+transition:   0.5s ease-in;
+
+font-size: 14px;
 color: white;
-        border-radius: 10px;
+ 
+  font-weight: 650;
+  border-radius: 5px;
+  z-index: 1;
+background-color: #277de0;
 }
 
+.course_btn2:hover {
+  transform: scale(1.1);
+   color: #277de0;
+    background-color: white;
+transition:   0.5s ease-in;
+  
+  font-size: 14px;
+  box-shadow: inset 8px 8px 12px #e2e2e2, inset -8px -8px 12px #fff;
 
-.count{
-    font-weight: 800;
-    font-size: 22px;
+}
+
+.count {
+  font-weight: 800;
+  font-size: 22px;
 }
