--- a/src/components/landing-section/Review/Review.css
+++ b/src/components/landing-section/Review/Review.css
@@ -1,7 +1,7 @@
 .box{
     border-radius: 25px;
-background: rgb(33,110,255);
-background: linear-gradient(58deg, rgba(33,110,255,1) 24%, rgba(0,0,0,1) 100%);
+background: #277de0;
+background: linear-gradient(58deg, #277de0 24%, rgba(0,0,0,1) 100%);
 border: none;
 
 
@@ -19,7 +19,7 @@ margin-left: 8%;
 margin-top: -8%;
 	border-left: 25px solid transparent;
 	border-right: 25px solid transparent;
-	border-top: 50px solid #216eff;
+	border-top: 50px solid #277de0;
     rotate: 15deg;
    
    
