--- a/src/components/landing-section/about/about.css
+++ b/src/components/landing-section/about/about.css
@@ -13,7 +13,8 @@
   line-height: 14px;
   letter-spacing: 1.2px;
   transition: .2s .1s;
-  background-image: linear-gradient(90deg,#1c1c1c,#216eff);
+  /* background-image: linear-gradient(90deg,#1c1c1c,#216eff); */
+  background-image: linear-gradient(90deg,#1c1c1c,#277de0);
   border: 0 solid;
   overflow: hidden;
 }
