--- a/src/index.css
+++ b/src/index.css
@@ -46,13 +46,19 @@ body {
   color: white;
   background: black;
   /* background-image: url(../src/components/landing-section/images/heropage3.png); */
-  background-image: linear-gradient(
+
+
+  /* background-image: linear-gradient(
       -45deg,
       rgba(4, 1, 38, 0.713),
       rgba(2, 3, 69, 0.895)
     ),
-    url(../src/components/landing-section/images/earth.png);
+    url(../src/components/landing-section/images/earth.png); */
+
+    background-image: url(../src/components/landing-section/images/earth.png);
   background-position: center;
+ 
+  
   /* background-image: linear-gradient(
   110deg,
   hsl(220deg 52% 15%) 0%,
