--- a/src/components/course/Section.css
+++ b/src/components/course/Section.css
@@ -49,27 +49,27 @@ border: 2px solid black;
     rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
     rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px !important;
 
-transition:   0.5s ease-in;
+transition:   0.5s ease-in !important;
 
-font-size: 14px;
-color: white;
+font-size: 14px !important;
+color: white !important;
  
-  font-weight: 650;
-  border-radius: 5px;
-  z-index: 1;
-background-color: #277de0;
+  font-weight: 650 !important;
+  border-radius: 5px !important;
+  z-index: 1 !important;
+background-color: #277de0 !important;
 }
 
 .course_btn2:hover {
-  transform: scale(1.1);
-   color: #277de0;
-    background-color: white;
-transition:   0.5s ease-in;
+  transform: scale(1.1) !important;
+   color: #277de0 !important;
+    background-color: white !important;
+transition:   0.5s ease-in !important;
   
-  font-size: 14px;
-  box-shadow: inset 8px 8px 12px #e2e2e2, inset -8px -8px 12px #fff;
+  font-size: 14px !important;
+  box-shadow: inset 8px 8px 12px #e2e2e2, inset -8px -8px 12px #fff !important;
 
 }
 
