--- a/src/components/landing-section/about/about.css
+++ b/src/components/landing-section/about/about.css
@@ -20,8 +20,8 @@
 }
 
 .ab_btn:hover {
-  cursor: pointer;
-  transition: all .3s ease-in;
-  padding-right: 30px;
-  padding-left: 30px;
+  cursor: pointer !important;
+  transition: all .3s ease-in !important;
+  padding-right: 30px !important;
+  padding-left: 30px !important;
 }
