--- a/src/components/layout/navbar/nav.css
+++ b/src/components/layout/navbar/nav.css
@@ -39,7 +39,6 @@
 }
 
 @media screen and (min-width:1024px) {
-  
 
   .mobileview{
     display: none;
@@ -49,12 +48,6 @@
 
 @media screen and  (max-width:440px){
 
-  .ant-modal-content {
-
-width: 300px !important;
-  margin-left: 5% !important;
-  margin-right: 50px !important;
-  }
 .buttonsub{
   margin-left: -10px !important;
 }
@@ -63,15 +56,6 @@ width: 300px !important;
 
 @media screen and  (max-width:1023px){
 
-  :where(.css-dev-only-do-not-override-mxhywb).ant-select-single:not(
-    .ant-select-customize-input
-  )
-  .ant-select-selector {
-  width: 250px;
-  height: 40px;
-;
-
-}
 
 .lapview{
   display:none;
@@ -93,12 +77,106 @@ margin-bottom: 25px;
 height: 40px !important;
 }
 
+
+
+/*main*/
+.modelhead{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .ant-modal-content {
-padding-left: 20px;
-padding-right: 20px;
+/* padding-left: 20px;
+padding-right: 20px; */
 width: 350px;
-  margin-left: 10%;
-  margin-right: 10%;
+
+
+
+  /* margin-left: 10%;
+  margin-right: 10%;  */
 }
 
 }
+
+
+.navheadlines:hover{
+
+ animation-name: mymove1;
+
+}
+
+
+.navheadlines:hover::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            /* width: 100%; */
+          width: 100%;
+            height: 1.5px;
+            background-color: rgb(255, 255, 255);
+           
+            animation: mymove1 3s linear ;
+           
+        }
+
+        @keyframes mymove1 {
+            0% {
+            left:0;
+                width: 0;
+            }
+  
+            10% {
+               
+                  width: 100%;
+
+            }
+  
+            
+        }
+
+
+
+
+
+
+
+/*mobile view */
+
+.linestext:hover{
+  /* border-color: orangered; */
+  /* transition: 1.5s ease-in-out; */
+  /* transform: mymove ease-in-out infinite; */
+
+  color:#277de0;
+
+  
+}
+
+.linestext:hover::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            /* width: 100%; */
+          width: 100%;
+            height: 1px;
+            background-color: rgb(0, 0, 0);
+           
+            animation: animate 3s linear ;
+           
+        }
+
+        @keyframes animate {
+            0% {
+            left:0;
+                width: 0;
+            }
+  
+            10% {
+               
+                  width: 100%;
+
+            }
+  
+            
+        }
