--- a/src/components/about-section/aboutse.css
+++ b/src/components/about-section/aboutse.css
@@ -40,3 +40,11 @@ display: block !important;
 /* margin-top: -20%; */
 transition: 0.5s ease-in-out;
 }
+
+
+.gro:hover{
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+
+  border: 2px solid black;
+
+}
