--- a/src/components/layout/navbar/nav.css
+++ b/src/components/layout/navbar/nav.css
@@ -26,7 +26,7 @@
 }
 
 .ant-select-arrow {
-  margin-top: -18px !important;
+  /* margin-top: -18px !important; */ 
   color: black !important;
 }
 
@@ -68,7 +68,7 @@
 
 
 .ant-select-single{
-margin-bottom: 25px;
+margin-bottom: 1px;
 
 }
 
@@ -143,6 +143,9 @@ width: 350px;
 
 /*mobile view */
 
+.linestext{
+  font-weight: 700 !important;
+}
 .linestext:hover{
   /* border-color: orangered; */
   /* transition: 1.5s ease-in-out; */
