--- a/src/index.css
+++ b/src/index.css
@@ -188,37 +188,37 @@ url('../public/courseimg/course.png') ; */
 .aboutbg {
   /* background-color: #0B0B0F; */
   /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
   /* background-color: #000035; */
 }
 .careerbg {
   /* background-color: black; */
   /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
   /* background-color: #000042; */
 }
 
 .videobg {
   /* background-color: black; */
   /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
   /* background-color: #000053; */
 }
 .eventbg {
   /* background-color: #020202; */
   /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
   /* background-color: #000068; */
 }
 .reviewbg {
   /* background-color: black; */
   /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
   /* background-color: #1c1c84; */
 }
 .footerbg {
   /* background-color: #ffffff; */
-  background-color: transparent;
+  background-color: white;
   /* color: white; */
 }
 
