--- a/src/components/landing-section/career/Career.css
+++ b/src/components/landing-section/career/Career.css
@@ -1,5 +1,10 @@
+
+.career_black_ball{
+    margin-top: -100px;
+}
+
 .img_arrow_down{
-    margin-top: -175px;
+    margin-top: -225px;
 }
 
 
@@ -27,6 +32,6 @@
     .img_arrow_down{
 
 
-        margin-left: 30px;
+        margin-left: 33px;
     }
 }
