--- a/src/components/landing-section/about/about.css
+++ b/src/components/landing-section/about/about.css
@@ -17,6 +17,7 @@
   background-image: linear-gradient(90deg,#1c1c1c,#277de0);
   border: 0 solid;
   overflow: hidden;
+  font-weight: 700;
 }
 
 .ab_btn:hover {
