--- a/src/components/layout/navbar/nav.css
+++ b/src/components/layout/navbar/nav.css
@@ -104,14 +104,14 @@ width: 350px;
 }
 
 
-.navheadlines:hover{
+.navtrans .navheadlines:hover{
 
  animation-name: mymove1;
 
 }
 
 
-.navheadlines:hover::before {
+.navtrans .navheadlines:hover::before {
             content: "";
             position: absolute;
             bottom: 0;
@@ -119,6 +119,30 @@ width: 350px;
           width: 100%;
             height: 1.5px;
             background-color: rgb(255, 255, 255);
+           
+            animation: mymove1 3s linear ;
+           
+        }
+
+
+
+
+
+        .navwhite .navheadlines:hover{
+
+ animation-name: mymove1;
+
+}
+
+
+.navwhite .navheadlines:hover::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            /* width: 100%; */
+          width: 100%;
+            height: 1.5px;
+            background-color: rgb(0, 0, 0);
            
             animation: mymove1 3s linear ;
            
